# LSEG-Exchange

./: CMakeLists.txt  readme.md
LSEG/: CMakeLists.txt  trader_app.cpp
LSEG/Exchange/: CMakeLists.txt
LSEG/Exchange/include/: execution_type.h  order.h  order_book.h  order_processor.h  report_generator.h
LSEG/Exchange/src/: exchange_app.cpp
LSEG/Trader/: CMakeLists.txt
LSEG/Trader/include/: rapidcsv.h  string_order.h
LSEG/Trader/src/: trader_app.cpp
LSEG/include/: order.h
